--- a/.i3/config
+++ b/.i3/config
@@ -13,7 +13,7 @@ set $mod Mod4
 set $alt_l Mod1
 
 # https://github.com/i3/i3/issues/2936
-disable_randr15 yes
+#disable_randr15 yes
 
 ### smibrd custom ###
 workspace_layout tabbed
@@ -24,11 +24,14 @@ bindsym $mod+n exec i3-input -F 'rename workspace to "%s"' -P 'New name: '
 bindsym $mod+Ctrl+l exec --no-startup-id i3lock -c 000000
 bindsym $mod+Mod1+l exec --no-startup-id i3lock -c 000000
 force_focus_wrapping yes
+exec --no-startup-id dunst_start.sh
 exec --no-startup-id xsetroot -bg black
 exec --no-startup-id nm-applet
 exec --no-startup-id gnome-sound-applet
 exec --no-startup-id gnome-settings-daemon
 exec --no-startup-id pasystray
+exec --no-startup-id launch_unison.sh
+exec --no-startup-id dropbox start
 #exec --no-startup-id nitrogen --restore
 
 # Font for window titles. Will also be used by the bar unless a different font
@@ -176,6 +179,7 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
+#        mode hide
         status_command i3status
         separator_symbol " | "
         colors {
@@ -185,8 +189,10 @@ bar {
 
 # https://i3wm.org/docs/user-contributed/lzap-config.html
 # pulse audio volume control
-bindsym XF86AudioLowerVolume exec /usr/bin/pactl set-sink-volume 0 -- '-5%'
-bindsym XF86AudioRaiseVolume exec /usr/bin/pactl set-sink-volume 0 -- '+5%'
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 -- +10% && killall -SIGUSR1 i3status
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -- -10% && killall -SIGUSR1 i3status
+#bindsym XF86AudioLowerVolume exec /usr/bin/pactl set-sink-volume 0 -- '-5%'
+#bindsym XF86AudioRaiseVolume exec /usr/bin/pactl set-sink-volume 0 -- '+5%'
 bindsym XF86AudioMute exec /usr/bin/pactl set-sink-volume 0 0
 bindsym XF86Launch1 exec /usr/bin/pactl play-sample that_was_easy
 bindsym XF86MonBrightnessUp exec /usr/bin/xbacklight -inc 10
