--- a/i3status/config
+++ b/i3status/config
@@ -1,41 +1,85 @@
-general {                       
-        output_format = "i3bar" 
-        colors = true           
-        interval = 5            
-}                               
+# i3status configuration file.
+# see "man i3status" for documentation.
 
-#order += "run_watch DHCP"
-order += "wireless wlp2s0"
-order += "ethernet eth0"
-order += "disk /"
-order += "battery 0"
+# It is important that this file is edited as UTF-8.
+# The following line should contain a sharp s:
+# ß
+# If the above line is not correctly displayed, fix your editor first!
+
+general {
+        colors = true
+        interval = 5
+        color_good = "#2AA198"
+        color_bad = "#586E75"
+        color_degraded = "#DC322F"
+}
+
+order += "cpu_usage"
+order += "cpu_temperature 0"
 order += "load"
-order += "tztime utc"
+order += "disk /"
+# order += "disk /home"
+order += "wireless _first_"
+order += "ethernet _first_"
+order += "battery all"
+# order += "load"
 order += "tztime local"
+order += "tztime utc"
+# order += "ipv6"
 
-wireless wlp2s0 {
-       format_up = "W: (%quality at %essid, %bitrate) %ip"
-       format_down = "W: down"
+cpu_usage {
+        format = " cpu  %usage "
 }
 
-ethernet eth0 {
-       # if you use %speed, i3status requires the cap_net_admin capability
-       format_up = "E: %ip (%speed)"
-       format_down = "E: down"
+cpu_temperature 0 {
+       format = "T: %degrees °C"
+       path = "/sys/devices/platform/coretemp.0/temp1_input"
 }
 
-battery 0 {
-       format = "%status %percentage %remaining %emptytime"
-       format_down = "No battery"
-       status_chr = "⚇ CHR"
-       status_bat = "⚡ BAT"
-       status_full = "☻ FULL"
-       path = "/sys/class/power_supply/BAT%d/uevent"
-       low_threshold = 10
+load {
+        format = " load %1min / %5min / %15min"
+        # max_threshold = 0.3
 }
 
-run_watch DHCP {
-       pidfile = "/var/run/dhclient*.pid"
+disk "/" {
+        # format = " hdd %avail "
+        format = " ⛁ %avail free"
+}
+
+ethernet _first_ {
+# if you use %speed, i3status requires root privileges
+        format_up = " lan: %ip %speed "
+        format_down = " no lan "
+}
+
+battery all {
+        # format = "%status %percentage %remaining %emptytime"
+        format = " %status %percentage"
+        format_down = "No battery"
+        last_full_capacity = true
+        integer_battery_capacity = true
+        # status_chr = ""
+        status_chr = "⚡"
+        # status_bat = "bat"
+        status_bat = "☉"
+        status_bat = ""
+        # status_unk = "?"
+        status_unk = "☉"
+        #status_unk = ""
+        # status_full = ""
+        status_full = "☻"
+        low_threshold = 15
+        threshold_type = time
+}
+
+tztime local {
+        format = "%Y-%m-%d %H:%M:%S"
+        #format = " %d.%m. %H:%M "
+}
+
+tztime utc {
+       format = "%Y-%m-%d %H:%M:%S %Z"
+       timezone = "UTC"
 }
 
 run_watch VPNC {
@@ -47,26 +91,3 @@ path_exists VPN {
        # path exists when a VPN tunnel launched by nmcli/nm-applet is active
        path = "/proc/sys/net/ipv4/conf/tun0"
 }
-
-tztime local {
-       format = "%Y-%m-%d %H:%M:%S"
-}
-
-tztime utc {
-       format = "%Y-%m-%d %H:%M:%S %Z"
-       timezone = "UTC"
-}
-
-load {
-       format = "Load: %1min / %5min / %15min"
-}
-
-cpu_temperature 0 {
-       format = "T: %degrees °C"
-       path = "/sys/devices/platform/coretemp.0/temp1_input"
-}
-
-disk "/" {
-       format = "/: %free"
-}
-
