--- a/i3status/config
+++ b/i3status/config
@@ -15,7 +15,7 @@ general {
 }
 
 order += "cpu_usage"
-order += "cpu_temperature 0"
+#order += "cpu_temperature 0"
 order += "load"
 order += "disk /"
 # order += "disk /home"
@@ -54,7 +54,7 @@ ethernet _first_ {
 
 battery all {
         # format = "%status %percentage %remaining %emptytime"
-        format = " %status %percentage"
+        format = "Bat %percentage %status"
         format_down = "No battery"
         last_full_capacity = true
         integer_battery_capacity = true
@@ -64,7 +64,7 @@ battery all {
         status_bat = "☉"
         status_bat = ""
         # status_unk = "?"
-        status_unk = "☉"
+        #status_unk = "☉"
         #status_unk = ""
         # status_full = ""
         status_full = "☻"
