--- a/i3/config
+++ b/i3/config
@@ -33,7 +33,8 @@ floating_modifier $mod
 bindsym $mod+Return exec gnome-terminal
 
 # kill focused window
-bindsym $mod+Shift+q kill
+# alt_l instead of mod to not conflict with OSX logout shortcut
+bindsym $alt_l+Shift+q kill
 
 # start program launcher
 bindsym $mod+d exec --no-startup-id dmenu_recency
